--- a/BookedReductions/AzureIntegration_BookedReductions.csproj
+++ b/BookedReductions/AzureIntegration_BookedReductions.csproj
@@ -23,5 +23,6 @@
   <ItemGroup>
     <Folder Include="Constants\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Deploy\" />
   </ItemGroup>
 </Project>
